[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=1]
[ext_resource path="res://World/Levels/MainMenu/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.00392157, 0.796078, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.0431373, 1, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.00392157, 0.796078, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.207843, 0.164706, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.00392157, 0.533333, 0.647059, 1 )

[node name="OptionsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -75.0
margin_right = 140.0
margin_bottom = 103.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.196078, 0.392157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 112.0
margin_bottom = 52.0

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../../Back")
focus_next = NodePath("../Vsync")
focus_previous = NodePath("../../Back")
text = "Fullscreen"

[node name="Vsync" type="CheckBox" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 52.0
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath("../../VBoxContainer2/MasterVol")
focus_next = NodePath("../../VBoxContainer2/MasterVol")
text = "Vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -28.0
margin_right = 112.0
margin_bottom = 28.0

[node name="MasterVol" type="HSlider" parent="VBoxContainer2"]
margin_right = 112.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../VBoxContainer/Vsync")
focus_neighbour_bottom = NodePath("../MusicVol")
focus_next = NodePath("../MusicVol")
focus_previous = NodePath("../../VBoxContainer/Vsync")
max_value = 24.0
step = 2.0

[node name="Label" type="Label" parent="VBoxContainer2/MasterVol"]
margin_left = 114.0
margin_top = 0.5
margin_right = 226.0
margin_bottom = 14.5
text = "Master volume"

[node name="SliderLabel" type="Label" parent="VBoxContainer2/MasterVol"]
margin_right = 27.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "100"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 2

[node name="MusicVol" type="HSlider" parent="VBoxContainer2"]
margin_top = 20.0
margin_right = 112.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../MasterVol")
focus_neighbour_bottom = NodePath("../SFXVol")
focus_next = NodePath("../SFXVol")
focus_previous = NodePath("../MasterVol")
max_value = 24.0
step = 2.0

[node name="Label2" type="Label" parent="VBoxContainer2/MusicVol"]
margin_left = 114.0
margin_top = 0.5
margin_right = 226.0
margin_bottom = 14.5
text = "Music volume"

[node name="SliderLabel" type="Label" parent="VBoxContainer2/MusicVol"]
margin_right = 27.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "100"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 2

[node name="SFXVol" type="HSlider" parent="VBoxContainer2"]
margin_top = 40.0
margin_right = 112.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../MusicVol")
focus_neighbour_bottom = NodePath("../../Back")
focus_next = NodePath("../../Back")
focus_previous = NodePath("../MusicVol")
max_value = 24.0
step = 2.0

[node name="Label3" type="Label" parent="VBoxContainer2/SFXVol"]
margin_left = 114.0
margin_top = 0.5
margin_right = 226.0
margin_bottom = 14.5
text = "SFX volume"

[node name="SliderLabel" type="Label" parent="VBoxContainer2/SFXVol"]
margin_right = 27.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "100"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 2

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 112.0
focus_neighbour_top = NodePath("../VBoxContainer2/SFXVol")
focus_neighbour_bottom = NodePath("../VBoxContainer/Fullscreen")
focus_next = NodePath("../VBoxContainer/Fullscreen")
focus_previous = NodePath("../VBoxContainer2/SFXVol")
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
text = "Back"

[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="VBoxContainer/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="value_changed" from="VBoxContainer2/MasterVol" to="." method="_on_MasterVol_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/MusicVol" to="." method="_on_MusicVol_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/SFXVol" to="." method="_on_SFXVol_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
